Fix Menu z-index

--- a/src/assets/styles/ui.css
+++ b/src/assets/styles/ui.css
@@ -108,11 +108,10 @@ html {
   background-color: var(--theme-dark-blue);
   position: fixed;
   width: 100%;
-  height: 250px;
+  height: 60px;
   top: 0;
-  z-index: 0;
+  z-index: 12;
   border-bottom: 1px solid gray;
-  border-radius: 0 0 20px 20px;
 }
 
 @media only screen and (max-width: 767px) {
