--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -107,11 +107,11 @@ html {
 	background-color: var(--theme-dark-blue);
 	position: fixed;
 	width: 100%;
-	height: 250px;
+	height: 60px;
 	top: 0;
-	z-index: 0;
+	z-index: 12;
 	border-bottom: 1px solid gray;
-	border-radius: 0 0 20px 20px;
+	// border-radius: 0 0 20px 20px;
 }
 
 // For Mobile
